# llm-diffusion

./: .gitignore  README.md  chat.py  data.py  hello.py  loss.py  model.py  modeling_utils.py  pyproject.toml  train.py  utils.py
checkpoints/state.orbax-checkpoint-tmp/: _CHECKPOINT_METADATA
ckpt_dir/state.orbax-checkpoint-tmp/: _CHECKPOINT_METADATA
ckpt_dir/state.orbax-checkpoint-tmp/ocdbt.process_0/: manifest.ocdbt
ckpt_dir/state_1763538803.744732/: _CHECKPOINT_METADATA  _METADATA  manifest.ocdbt
ckpt_dir/state_1763538803.744732/array_metadatas/: process_0
ckpt_dir/state_1763538803.744732/ocdbt.process_0/: manifest.ocdbt
ckpt_dir/state_1763538814.491318/: _CHECKPOINT_METADATA  _sharding  manifest.ocdbt
ckpt_dir/state_1763538814.491318/ocdbt.process_0/: manifest.ocdbt
diffusion/: scheduler.py
llama-arch/: layers.py
wandb/: latest-run
wandb/run-20251118_234939-p5fr02u4/: run-p5fr02u4.wandb
wandb/run-20251118_234939-p5fr02u4/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251118_235048-y30lyt3x/: run-y30lyt3x.wandb
wandb/run-20251118_235048-y30lyt3x/files/: requirements.txt  wandb-metadata.json
