[project]
name = "llm-diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.5.1",
    "einops>=0.8.1",
    "flax>=0.10.5",
    "jax>=0.5.3",
    "jaxtyping>=0.3.1",
    "optax>=0.2.4",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]
