[project]
name = "llm-diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.1",
    "flax>=0.12.0",
    "jax[cpu]>=0.8.0",
    "optax>=0.2.6",
    "orbax>=0.1.9",
    "orbax-checkpoint>=0.11.28",
    "transformers>=4.57.1",
    "wandb>=0.23.0",
]
